Fix menu for no-JS use cases, whitespace.

--- a/src/scss/modules/_main-nav.scss
+++ b/src/scss/modules/_main-nav.scss
@@ -11,82 +11,83 @@ $has-drawer: true;
 // z-index usage documented in: themes/foh-test/template-parts/header/header-masthead.php
 
 .main-navigation {
-	// anchor link that opens the menu in no-JS use cases
-	.js-menu-link--open {
-		z-index: 15;
-	}
+  // anchor link that opens the menu in no-JS use cases
+  .js-menu-link--open {
+    z-index: 15;
+  }
 
-	// anchor link that closes the menu in no-JS use cases
-	.js-menu-link--close {
-		z-index: 25;
-	}
+  // anchor link that closes the menu in no-JS use cases
+  .js-menu-link--close {
+    z-index: 25;
+  }
 
-	// and the expanded drawer in no-JS use cases
-	.foh-drawer:target,
-	// The menu toggle in JS-enabled use cases
-	.js-menu-toggle-button {
-		z-index: 26;
-		color: var(--color-neon-lemon);
-	}
+  // and the expanded drawer in no-JS use cases
+  .foh-drawer:target,
+  // The menu toggle in JS-enabled use cases
+  .js-menu-toggle-button {
+    z-index: 26;
+    color: var(--color-neon-lemon);
+  }
 
-	// Align menu buttons at top right
-	.js-menu-link--open,
-	.js-menu-link--close,
-	.js-menu-toggle-button,
-	// and the expanded drawer, in no-JS use cases
-	.foh-drawer:target {
-		position: absolute;
-		top: 0;
-		right: 0;
-	}
+  // Align menu buttons at top right
+  .js-menu-link--open,
+  .js-menu-link--close,
+  .js-menu-toggle-button,
+  // and the expanded drawer, in no-JS use cases
+  .foh-drawer:target {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translateY(0);
+  }
 
-	.js-menu-toggle-button[aria-expanded="true"] + .foh-drawer {
-		transform: translateY(0);
-		position: relative;
-	}
+  .js-menu-toggle-button[aria-expanded="true"] + .foh-drawer {
+    transform: translateY(0);
+    position: relative;
+  }
 
-	// no-JS
-	body:has(.foh-drawer:target),
-	// JS-enabled
-	body:has(.js-menu-toggle-button[aria-expanded="true"])	{
-		overflow: hidden;
-	}
+  // no-JS
+  body:has(.foh-drawer:target),
+  // JS-enabled
+  body:has(.js-menu-toggle-button[aria-expanded="true"])  {
+    overflow: hidden;
+  }
 
-	// The drawer content (small screen sizes)
-	.foh-drawer {
-		display: block; // needed because custom elements default to inline
-		// Just testing
-		background-color: rgba(150, 150, 250, 1) !important;
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100vw;
-		height: 100vh;
-		transition-property: transform;
-		transition-duration: 0.35s;
-		transition-timing-function: ease-in-out;
-		transform: translateY(-100%);
-		z-index: 20;
+  // The drawer content (small screen sizes)
+  .foh-drawer {
+    display: block; // needed because custom elements default to inline
+    // Just testing
+    background-color: rgba(150, 150, 250, 1) !important;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    transition-property: transform;
+    transition-duration: 0.35s;
+    transition-timing-function: ease-in-out;
+    transform: translateY(-100%);
+    z-index: 20;
 
-		// Show the menu in the header, without drawer (large screen sizes)
-		@media screen and (min-width: $breakpoint-3xl) {
-			position: relative;
-			width: auto;
-			height: auto;
-			transform: translateY(0);
-		}
+    // Show the menu in the header, without drawer (large screen sizes)
+    @media screen and (min-width: $breakpoint-3xl) {
+      position: relative;
+      width: auto;
+      height: auto;
+      transform: translateY(0);
+    }
 
-		// The content of the ul (all screen sizes)
-		// See params usage guide in _menu.scss where the @mixin is defined
-		@include menu($location, $has-drawer);
-	}
+    // The content of the ul (all screen sizes)
+    // See params usage guide in _menu.scss where the @mixin is defined
+    @include menu($location, $has-drawer);
+  }
 }
 
 // Don't show a menu button on larger screens
 .js-menu-link--open,
 .js-menu-link--close,
 .js-menu-toggle-button {
-	@media screen and (min-width: $breakpoint-3xl) {
-		display: none;
-	}
+  @media screen and (min-width: $breakpoint-3xl) {
+    display: none;
+  }
 }
